kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redemption
  namespace: redemption
  labels:
    app.kubernetes.io/name: redemption
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: redemption
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 9090
      targetPort: metrics
